--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab3/lab3.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab3/lab3.vcxproj.filters
@@ -15,19 +15,34 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CTree.cpp">
+    <ClCompile Include="Node.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="CNode.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="CMain.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="Tree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Interface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PrefixExpressionParser.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CNode.h">
+    <ClInclude Include="Tree.h">
       <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PrefixExpressionParser.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
