--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab3/lab3.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab3/lab3.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Node\OperatorNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Interface.h">
