--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab3/lab3.vcxproj
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab3/lab3.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Interface.cpp" />
+    <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Node\ConstantNode.cpp" />
     <ClCompile Include="src\Node\Node.cpp" />
     <ClCompile Include="src\Node\OperatorNode.cpp" />
