feat: add missing header files

--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
@@ -44,5 +44,17 @@
     <ClInclude Include="src\UIInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tree.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UIInterface.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stringUtils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
