--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\UIInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Node.h">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="stringUtils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Parser.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
