--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Parser.cpp" />
+    <ClCompile Include="src\Parser.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Node.cpp" />
     <ClCompile Include="src\stringUtils.cpp" />
@@ -147,15 +147,11 @@
     <ClCompile Include="src\UIInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="Parser.h" />
     <ClInclude Include="src\Node.h" />
+    <ClInclude Include="src\Parser.h" />
     <ClInclude Include="src\stringUtils.h" />
     <ClInclude Include="src\Tree.h" />
     <ClInclude Include="src\UIInterface.h" />
-    <ClInclude Include="stringUtils.h" />
-    <ClInclude Include="Tree.h" />
-    <ClInclude Include="UIInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
