--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
@@ -24,10 +24,10 @@
     <ClCompile Include="src\stringUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Tree.cpp">
+    <ClCompile Include="src\PrefixExpressionTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\UIInterface.cpp">
+    <ClCompile Include="src\ExpressionTreeInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Parser.cpp">
@@ -35,13 +35,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Tree.h">
+    <ClInclude Include="src\PrefixExpressionTree.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Node.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\UIInterface.h">
+    <ClInclude Include="src\ExpressionTreeInterface.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\stringUtils.h">
