--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="src\stringUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Constants.h" />
     <ClInclude Include="src\Node.h" />
     <ClInclude Include="src\Parser.h" />
     <ClInclude Include="src\PrefixExpressionTree.h" />
