--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab4/lab4.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="src\Node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\stringUtils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\PrefixExpressionTree.h">
@@ -35,10 +32,10 @@
     <ClInclude Include="src\ExpressionTreeInterface.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Parser.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\Constants.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\stringUtils.h">
+    <ClInclude Include="src\PrefixExpressionParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
