feat: moved constants to Constants.h

--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab6/AGChallenge/AGChallenge.vcxproj
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab6/AGChallenge/AGChallenge.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Tools.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Evaluator.h" />
     <ClInclude Include="fitness.h" />
     <ClInclude Include="GeneticAlgorithm.h" />
