--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab6/AGChallenge/AGChallenge.vcxproj.filters
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab6/AGChallenge/AGChallenge.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClInclude Include="Individual.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
