--- a/Semester 3/Efficient Programming Techniques/Laboratories/lab6/AGChallenge/AGChallenge.vcxproj
+++ b/Semester 3/Efficient Programming Techniques/Laboratories/lab6/AGChallenge/AGChallenge.vcxproj
@@ -146,11 +146,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Evaluator.cpp" />
+    <ClCompile Include="ExperimentManager.cpp" />
     <ClCompile Include="fitness.cpp" />
     <ClCompile Include="GeneticAlgorithm.cpp" />
     <ClCompile Include="Individual.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainWithManager.cpp" />
     <ClCompile Include="MyMath.cpp" />
     <ClCompile Include="NETsimulator.cpp" />
     <ClCompile Include="Optimizer.cpp" />
@@ -160,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Evaluator.h" />
+    <ClInclude Include="ExperimentManager.h" />
     <ClInclude Include="fitness.h" />
     <ClInclude Include="GeneticAlgorithm.h" />
     <ClInclude Include="Individual.h" />
